Wed Jun  9 18:36:53 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstpianorollctrl.c: fix full vs. whole note wording.
	add 1/32, 1/64, 1/128 note lengths and quantization boundaries.

	* beast-gtk/bsttrackrollctrl.c: fix full vs. whole note wording.
	add 1/32, 1/64, 1/128 quantization boundaries.

	* beast-gtk/icons/Makefile.am:
	* beast-gtk/icons/note-32.png:
	* beast-gtk/icons/note-64.png:
	* beast-gtk/icons/note-128.png:
	* beast-gtk/icons/qnote-32.png:
	* beast-gtk/icons/qnote-64.png:
	* beast-gtk/icons/qnote-128.png:
	* beast-gtk/icons/notes.xcf:
	added new stock icons.

Mon Jun  7 19:21:37 2004  Tim Janik  <timj@gtk.org>

	* docs/site-about.texi:
	* docs/site-contact.texi:
	* docs/site-navigation.xml:
	* docs/site-news.texi:
	* docs/site-search.texi:
	modified wiki urls to be /wiki: relative.

Mon May 31 16:37:38 2004  Tim Janik  <timj@gtk.org>

	* launchers/Makefile.am: prefix $(bindir) with $(DESTDIR) to allow
	installations in chroot-ed environments (package building).
	use install-exec-hook: to set suid permissions.
	changes suggested by Sam Hocevar.

Thu May 20 14:25:03 2004  Tim Janik  <timj@gtk.org>

	* configure.in: changed version to 0.6.2-rc1, iface 0, binary 0.

Sat May  8 10:19:01 2004  Tim Janik  <timj@gtk.org>

	* docs/site-links-synthesis.texi: link list update.

Wed May  5 18:16:11 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstmain.c (bst_early_parse_args): fixed parsing bug.

	* beast-gtk/bstusermessage.c (update_dialog): some dialog layout
	tweaking for bigger error messages.

Wed May  5 15:19:46 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/Makefile.am: grep for new debugging statements
	sfi_debug() and sfi_debug_check().

	* beast-gtk/bstmain.c: adapt to new debugging code.
	install log message dialog handler.
	support $BST_NO_DEBUG, $BEAST_NO_DEBUG and --no-debug.

	* beast-gtk/bstusermessage.c: adapt to BSE message type
	changes. provide log message handler for new debug system.
